feat: search route & pagination on index route
